@@ -1,3 +1,8 @@
+2002-05-04  Bruno Haible  <bruno@clisp.org>
+
+	* javacomp.c (compile_java_class): Ignore non-digits in the first
+	line of the output of "gcj --version". Needed for gcj 3.1.
+
 2002-04-30  Bruno Haible  <bruno@clisp.org>
 
 	* stdbool.h.in (_Bool): Omit the definition if _Bool is already known
